fixed issue of gallery scrolling sideways into whitespace

--- a/app/assets/stylesheets/posts.css.sass
+++ b/app/assets/stylesheets/posts.css.sass
@@ -28,8 +28,8 @@ body
 
 #sidebar 
 	float: left
-	width: 200px
-	height: 100%
+	width: 250px
+	// height: 100%
 	// display: table-cell
 	position: fixed
 	margin: 25px
@@ -59,7 +59,6 @@ body
 	top: 10px 
 	left: 75% 
 	top: 10%
-	width: 100% 
 	visibility: hidden
 	opacity: 0
 	transition: visibility 0s linear 0.05s,opacity 0.05s linear 
@@ -67,7 +66,7 @@ body
 .box:hover
 	img
 		opacity: 0.9
-		transition: visibility 0s linear 0.2s,opacity 0.2s linear 
+		transition: visibility 0s linear 0.1s,opacity 0.1s linear 
 	.heart
 		visibility: visible
 		opacity: 1
